# AI-Engineer-Internship-at-Xeven-Solutions

./: .gitignore  README.md
Day_21/: week3_document_analyzer.py
Lang_Graph/: L1_nodes.ipynb  L2_edges.ipynb  L3-L4_cedges_memory.ipynb  L5_interrupt.ipynb  L6_EmailAgent.ipynb  app.py  chatbot.ipynb  lang_graph_agent.ipynb  persitence.ipynb  promt_chaining.ipynb  pyproject.toml  simple_llm.ipynb  test.ipynb
Lang_Graph/langgraph-agent/: .env.example  .gitignore  agent.py  config.py  main.py  requirements.txt  tools.py
Lang_Graph/langgraph-agent/database/: db.py  schema.sql  store.py
day_1/: Learnings.md  README.md  app.py  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
day_10/: Learnings.md  README.md
day_2/: README.md  learnings.md  list_comprehension.ipynb  python_data_structures.ipynb
day_3/: Learnings.md  README.md  config.json  day11.ipynb  day9.ipynb  day_10.ipynb  inventory_report.json  requirements.txt  students.json
day_4/: Learnings.md  README.md  day_16_langchain.py  employee.csv  groq_chatbot.py  langchain.ipynb  prompt.py  sample.txt
day_5/: Learnings.md  README.md  day_17.ipynb  day_18.ipynb  prompt_engineering.md  smart_doc_processing_bot.py  tecnical and bussiness writting.txt
day_6/: app.py  articles.json  day_20.ipynb  requirements.txt  structured_article.json
day_7/: chroma.py  faiss_extended.py  faiss_setup.py  multi_entity_extraction.ipynb
day_8/: fastapi_basics.py  rag_api.py  rag_with_memory.py  task1_simple_rag.py  task2_custom_prompt_rag.py  task3_multi_document_rag.py
day_9/: app.py  hybrid_search.py  main.py  rag.py  (+1 more)
(+29 files in other folders)
