[project]
name = "lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.7",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
